--- a/src/shop.client.prj/shop.client.csproj
+++ b/src/shop.client.prj/shop.client.csproj
@@ -16,13 +16,6 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
-
-  <ItemGroup>
-    <AvaloniaXaml Remove="Configuration\**" />
-    <Compile Remove="Configuration\**" />
-    <EmbeddedResource Remove="Configuration\**" />
-    <None Remove="Configuration\**" />
-  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.0.0" />
@@ -39,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\shop.model.prj\shop.model.csproj" />
     <ProjectReference Include="..\shop.ui.prj\shop.ui.csproj" />
   </ItemGroup>
 
@@ -51,6 +45,6 @@
 
 
   <ItemGroup>
-    <Folder Include="Http\" />
+    <Folder Include="Extensions\HttpEntity\" />
   </ItemGroup>
 </Project>
