-Добавление инструкции пользования к Readme -Рефакт DI в Server'е -Фикс бага, что при инициализации сервера некорректное количество добавлялось тестовых данных, если таблица продктов пуста

--- a/src/shop.model.prj/shop.model.csproj
+++ b/src/shop.model.prj/shop.model.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Folder Include="Bracket\Products\" />
     <Folder Include="Home\" />
     <Folder Include="Profile\" />
   </ItemGroup>
