--- a/src/shop.server.prj/shop.server.csproj
+++ b/src/shop.server.prj/shop.server.csproj
@@ -23,5 +23,9 @@
  
   <ItemGroup>
     <None Remove=".gitignore" />
+  </ItemGroup>
+ 
+  <ItemGroup>
+    <Folder Include="Modules\" />
   </ItemGroup> 
 </Project>
