--- a/src/shop.ui.wpf.prj/shop.ui.wpf.csproj
+++ b/src/shop.ui.wpf.prj/shop.ui.wpf.csproj
@@ -5,15 +5,8 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Shop.UI.WPF.Desktop</RootNamespace>
+    <RootNamespace>Shop.UI.WPF</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="Converters\" />
-    <Folder Include="Controls\" />
-    <Folder Include="Resources\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
